Add FSSAI license number to footer for regulatory compliance

--- a/sprouts.html
+++ b/sprouts.html
@@ -132,7 +132,7 @@
             <p>We use wooden tools + wool gloves—so metal never chills the mountain's spirit... as the ancients taught.</p>
         </section>
     </div>
-    
+   
     <footer>
         <div class="footer-bg"></div>
         <div class="contact-info">
@@ -148,6 +148,7 @@
   <!-- Your content goes here -->
   <div class="container">
     <h1>under the aetherial Ora</h1>
+<p>FSSAI License No: 13316002000588</p>
     <p class="tagline">"HALAL🕌"</p>
     <!-- sprout cards etc. -->
   </div>
