Added حلال (Halal) in Arabic script to HTML for symbolic clarity & cultural authenticity

--- a/sprouts.html
+++ b/sprouts.html
@@ -146,7 +146,7 @@
     </div>
     <p>Managed by <strong>aryhreal ORA</strong></p>
     <p class="final-line">Pure • Wild • Timeless<br>Born of peaks, guided by wind.</p>
-    <p class="license-tag">FSSAI License No: 13316002000588 • HALAL 🕌</p>
+    <p class="license-tag">FSSAI License No: 13316002000588 • حلال 🕌</p>
   </footer>
 
   <!-- Script -->
