--- a/sprouts.html
+++ b/sprouts.html
@@ -147,6 +147,11 @@
     <p>Managed by <strong>aryhreal ORA</strong></p>
     <p class="final-line">Pure • Wild • Timeless<br>Born of peaks, guided by wind.</p>
     <p class="license-tag">FSSAI License No: 13316002000588 • حلال 🕌</p>
+    <p class="license-tag">
+  FSSAI License No: 13316002000588 • حلال 🔍<br>
+  Trademark Classes: 21 (Utensils, eco-containers), 31 (Agricultural products, edible sprouts)
+</p>
+
   </footer>
 
   <!-- Script -->
